# autoq-qec

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml  setup_github.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
autoq_qec/: __init__.py  algorithm_estimator.py  distillation.py  qec_estimator.py  real_hardware.py  recommender.py  visualizer.py
tests/: test_distillation.py  test_qec_estimator.py  test_v2_features.py
